updated routes and fixed recipe display on user show page

--- a/app/assets/stylesheets/themes/comment_styles.scss
+++ b/app/assets/stylesheets/themes/comment_styles.scss
@@ -1,16 +1,12 @@
-.comment-box {
-	@extend .col-md-4;
-	position: relative;
-	height: 180px;
-	
-	:hover {
-		z-index: 1;
-	}
-}
 
 .inner-comment-box {
 	@extend .col-md-12;
 	@extend .panel;
 	@extend .panel-default;
 	padding: 0;
+}
+
+.comment-well {
+	@extend .well;
+	margin-top: 10px;
 }
