added rating count to display

--- a/app/assets/stylesheets/ratings.scss
+++ b/app/assets/stylesheets/ratings.scss
@@ -3,5 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .display-rating {
+	display: inline;
+}
+
+.rating-box {
 	margin-bottom: 10px;
 }
