--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -66,7 +66,7 @@
 
 <div class="panel panel-default comment" id="comment_form" >
 	<div class="panel-heading">
-		<strong>Comment on the recipe:</strong>
+		<strong>Comment on this recipe:</strong>
 	</div>
 	
 	<div class="panel-body">
