--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,16 +3,16 @@
     <h2>Sign up</h2>
   </div>
   <div class="panel-body">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {multipart: true}) do |f| %>
     <%= devise_error_messages! %>
 
       <div class="form-group">
-        <%= f.label :email %>
+        <%= f.label :email, class: "control-label" %>
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :password %>
+        <%= f.label :password, class: "control-label" %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
@@ -20,8 +20,13 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation, class: "control-label" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :add_image, class: "control-label" %><br />
+        <%= f.file_field :avatar %>
       </div>
 
       <div class="actions">
