--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
 									
 									<p></p>
 									<p><%= link_to 'edit', edit_recipe_path(recipe) if can? :update, recipe %>
-									<%= link_to 'delete', recipe_path(recipe), method: 'delete', data: { confirm: 'Are you sure?' } if can? :destroy, recipe %></p>
+									<%= link_to 'delete', recipe_path(recipe), method: 'DELETE', data: { confirm: 'Are you sure?' } if can? :destroy, recipe %></p>
 
 								</div>
 							</div>
@@ -68,6 +68,7 @@
 			no recipes to display
 		</div>
 	<% end %>
+
 
 
 
