--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -44,12 +44,9 @@
 		<% end %>
 	</div>
 
-	<div class="form-group <%= 'has-error' if recipe.errors[:directions].any? %>">
+	<div class="form-group">
 		<%= f.label 'Add Image:', class: "control-label"  %><br>
 		<%= f.file_field :image %>
-		<% if recipe.errors[:directions].any? %>
-			<span class="help-block"><%= recipe.errors.full_messages_for(:directions).to_sentence %></span>
-		<% end %>
 	</div>
 
 	<div>
