--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,20 +4,19 @@
 			<div class="panel-heading">
 				<h2><%= @user.email_name %>'s profile</h2>
 			</div>
-			<div class="panel-body">
-				<div class="media">
-					<a class="media-left" href='/users/<%=@user.id%>'>
-						<%= image_tag @user.avatar.url(:original), class: 'media-object img-circle img-fluid pull-xs-left' %>
-					</a>
-					<div class="media-body text-center">
-						<div><%= link_to "Add a recipe", new_recipe_path, class: "btn btn-link card-link" if @user == current_user %></div>
-						<div><%= link_to "Comments", user_comments_path(@user), class: "btn btn-link card-link" %></div>
-						<div>
-							<%= form_tag comments_path, method: 'get' do %>
-								<%= hidden_field_tag :commenter_id, @user.id %>
-								<%= submit_tag "Reviews", class: "btn btn-link card-link" %>
-							<% end %>
-						</div>
+			<div class="row">
+				<div class=" col-xs-6 col-sm-6 col-md-6 col-lg-6">
+					<%= link_to (image_tag @user.avatar.url(:original), class: 'img-circle index-image'), user_path(@user) %>
+				</div>
+				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+					<div><%= link_to "Add a recipe", new_recipe_path, class: "btn btn-link card-link" if @user == current_user %></div>
+					<div><%= link_to "Comments", user_comments_path(@user), class: "btn btn-link card-link" %></div>
+
+					<div>
+						<%= form_tag comments_path, method: 'get' do %>
+							<%= hidden_field_tag :commenter_id, @user.id %>
+							<%= submit_tag "Reviews", class: "btn btn-link card-link" %>
+						<% end %>
 					</div>
 				</div>
 			</div>
@@ -38,6 +37,8 @@
 								</div>
 								
 								<div class="panel-body">	
+									<%= link_to (image_tag recipe.image.url(:original), class: 'index-image'), recipe_path(recipe) %>
+									<p></p>
 									<p>Posted on: <%= post_date(recipe) %></p>
 									<% if recipe.try(:rating_avg) %>
 										<div class="rating-box"><div class="display-rating" data-id=<%=recipe.id%> data-rating=<%=recipe.rating_avg%>></div>(<%=recipe.ratings.length%>)</div>
