--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -69,45 +69,47 @@
 	
 		
 <%= render partial: 'display_comment', locals: { comments: @recipe.comments.dated } %>
-
-
-<div class="panel panel-default comment" id="comment_form" >
-	<div class="panel-heading">
-		<strong>Comment on this recipe:</strong>
-	</div>
-	
-	<div class="panel-body">
-		<%= form_for @recipe.comments.build, remote: true, action: comments_path, method: 'post' do |f| %>
-			<%= f.hidden_field :recipe_id, value: @recipe.id %>
-			<div class="form-group">
-				<%= f.label "Add a comment" %>
-				<%= f.text_area :content, cols: 55, rows: 5, class: "form-control" %>
-				<span class="help-block"></span>
+<div class="row">
+	<div class="col-md-6">
+		<div class="panel panel-default" id="comment_form" >
+			<div class="panel-heading">
+				<strong>Comment on this recipe:</strong>
 			</div>
-			<%= f.submit class: "btn btn-primary" %>
-		<% end %>
+			
+			<div class="panel-body">
+				<%= form_for @recipe.comments.build, remote: true, action: comments_path, method: 'post' do |f| %>
+					<%= f.hidden_field :recipe_id, value: @recipe.id %>
+					<div class="form-group">
+						<%= f.label "Add a comment" %>
+						<%= f.text_area :content, cols: 55, rows: 5, class: "form-control" %>
+						<span class="help-block"></span>
+					</div>
+					<%= f.submit class: "btn btn-primary" %>
+				<% end %>
+			</div>
+		</div>
 	</div>
 </div>
 
-
-
-
-
-<div id="rating" class="panel panel-default comment">
-	<div class="panel-heading">
-		<strong>Rate this recipe:</strong>
-	</div>
-	
-	<div class="panel-body">
-		<%= form_for @recipe.ratings.build, action: ratings_path, method: 'post' do |f| %>
-			<%= f.hidden_field :recipe_id, value: @recipe.id %>
-			<div class="form-group">
-				<%= f.label "Add a rating", class: "control-label" %>
-				<div id="star" data-rated="false"></div>
-				<span class="help-block"></span>
+<div class="row">
+	<div class="col-md-6">
+		<div id="rating" class="panel panel-default">
+			<div class="panel-heading">
+				<strong>Rate this recipe:</strong>
 			</div>
-			<%= f.submit "submit", class: "btn btn-primary" %>
-		<% end %>
+			
+			<div class="panel-body">
+				<%= form_for @recipe.ratings.build, action: ratings_path, method: 'post' do |f| %>
+					<%= f.hidden_field :recipe_id, value: @recipe.id %>
+					<div class="form-group">
+						<%= f.label "Add a rating", class: "control-label" %>
+						<div id="star" data-rated="false"></div>
+						<span class="help-block"></span>
+					</div>
+					<%= f.submit "submit", class: "btn btn-primary" %>
+				<% end %>
+			</div>
+		</div>
 	</div>
 </div>
 
